--- a/rufangrongke/rufangrongke/Classes/wo/View/WXZPersonalPhoneCell.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/View/WXZPersonalPhoneCell.xib
@@ -29,7 +29,7 @@
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits"/>
                     </textField>
-                    <button opaque="NO" tag="100009" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LEf-1S-SGR">
+                    <button opaque="NO" tag="100009" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LEf-1S-SGR">
                         <rect key="frame" x="237" y="15" width="75" height="25"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <state key="normal" title="获取验证码" backgroundImage="wo_codebg">
