1030 王晓植: 呵呵

--- a/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
+++ b/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
@@ -20,7 +20,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hv4-mD-grc" userLabel="手机号码">
-                    <rect key="frame" x="0.0" y="40" width="530" height="45"/>
+                    <rect key="frame" x="0.0" y="40" width="600" height="45"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="手机号码" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q2c-qI-JfY">
                             <rect key="frame" x="15" y="13" width="68" height="18"/>
@@ -28,18 +28,18 @@
                                 <constraint firstAttribute="width" constant="68" id="yCJ-VM-A1b"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Usu-Bl-zdT" userLabel="线">
-                            <rect key="frame" x="83" y="39" width="432" height="1"/>
+                            <rect key="frame" x="83" y="39" width="502" height="1"/>
                             <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="doZ-An-YnR"/>
                             </constraints>
                         </view>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e91-cy-sXd" userLabel="手机号码">
-                            <rect key="frame" x="98" y="14" width="417" height="17"/>
+                            <rect key="frame" x="98" y="14" width="487" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
@@ -63,26 +63,26 @@
                     </variation>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DgB-ib-5cK" userLabel="验证码">
-                    <rect key="frame" x="0.0" y="85" width="530" height="45"/>
+                    <rect key="frame" x="0.0" y="85" width="600" height="45"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="验证码" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEF-Eq-lIZ">
-                            <rect key="frame" x="15" y="13.5" width="68" height="18"/>
+                            <rect key="frame" x="15" y="13" width="68" height="18"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="68" id="HZu-NO-zer"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mo3-z1-vUp" userLabel="线">
-                            <rect key="frame" x="83" y="39.5" width="432" height="1"/>
+                            <rect key="frame" x="83" y="39" width="502" height="1"/>
                             <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="GhV-QN-u84"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9OA-r7-ajU" userLabel="验证码">
-                            <rect key="frame" x="98" y="13.5" width="417" height="17"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9OA-r7-ajU" userLabel="验证码">
+                            <rect key="frame" x="98" y="13" width="472" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
@@ -108,26 +108,26 @@
                     </variation>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="piu-gV-EzG" userLabel="重置密码">
-                    <rect key="frame" x="0.0" y="130" width="530" height="45"/>
+                    <rect key="frame" x="0.0" y="130" width="600" height="45"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="重置密码" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ilD-no-neh">
-                            <rect key="frame" x="15" y="13.5" width="68" height="18"/>
+                            <rect key="frame" x="15" y="13" width="68" height="18"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="68" id="72g-fQ-icc"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O7s-6s-g1F" userLabel="线">
-                            <rect key="frame" x="83" y="39.5" width="432" height="1"/>
+                            <rect key="frame" x="83" y="39" width="502" height="1"/>
                             <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="Nrk-Mr-Y8O"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fci-Fr-N45" userLabel="重置密码">
-                            <rect key="frame" x="98" y="13.5" width="417" height="17"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fci-Fr-N45" userLabel="重置密码">
+                            <rect key="frame" x="98" y="13" width="472" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
@@ -155,9 +155,10 @@
                     </variation>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hJY-Ex-sYU" customClass="JxbScaleButton">
-                    <rect key="frame" x="520" y="92.5" width="72" height="30"/>
+                    <rect key="frame" x="515" y="92.5" width="70" height="30"/>
                     <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstAttribute="width" constant="70" id="JiP-TB-Rdp"/>
                         <constraint firstAttribute="height" constant="30" id="auk-C9-POm"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
@@ -188,10 +189,10 @@
             <constraints>
                 <constraint firstItem="hJY-Ex-sYU" firstAttribute="leading" secondItem="DgB-ib-5cK" secondAttribute="trailing" constant="-10" id="8sS-sT-Rbu"/>
                 <constraint firstItem="W1f-YZ-qLC" firstAttribute="top" secondItem="piu-gV-EzG" secondAttribute="bottom" constant="60" id="FJJ-P6-8hi"/>
-                <constraint firstAttribute="trailing" secondItem="DgB-ib-5cK" secondAttribute="trailing" constant="70" id="Iq3-ck-9zX"/>
+                <constraint firstAttribute="trailing" secondItem="DgB-ib-5cK" secondAttribute="trailing" id="Iq3-ck-9zX"/>
                 <constraint firstItem="W1f-YZ-qLC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="18" id="IuG-Iv-aBK"/>
-                <constraint firstAttribute="trailing" secondItem="Hv4-mD-grc" secondAttribute="trailing" constant="70" id="M5H-YZ-vq5"/>
-                <constraint firstAttribute="trailing" secondItem="hJY-Ex-sYU" secondAttribute="trailing" constant="8" id="Vdz-H0-dj0"/>
+                <constraint firstAttribute="trailing" secondItem="Hv4-mD-grc" secondAttribute="trailing" id="M5H-YZ-vq5"/>
+                <constraint firstAttribute="trailing" secondItem="hJY-Ex-sYU" secondAttribute="trailing" constant="15" id="Vdz-H0-dj0"/>
                 <constraint firstItem="DgB-ib-5cK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="XsR-0f-Ib9"/>
                 <constraint firstItem="piu-gV-EzG" firstAttribute="top" secondItem="DgB-ib-5cK" secondAttribute="bottom" id="cmI-pB-Qan"/>
                 <constraint firstItem="hJY-Ex-sYU" firstAttribute="centerY" secondItem="fEF-Eq-lIZ" secondAttribute="centerY" id="crP-nN-KjC"/>
@@ -200,8 +201,13 @@
                 <constraint firstItem="piu-gV-EzG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="q5G-O2-P65"/>
                 <constraint firstItem="Hv4-mD-grc" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="uVS-Sy-oXV"/>
                 <constraint firstItem="Hv4-mD-grc" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="wJx-u2-SYP"/>
-                <constraint firstAttribute="trailing" secondItem="piu-gV-EzG" secondAttribute="trailing" constant="70" id="yvZ-R2-aez"/>
+                <constraint firstAttribute="trailing" secondItem="piu-gV-EzG" secondAttribute="trailing" id="yvZ-R2-aez"/>
             </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="8sS-sT-Rbu"/>
+                </mask>
+            </variation>
         </view>
     </objects>
     <resources>
